--- a/src/Button.css
+++ b/src/Button.css
@@ -1,5 +1,3 @@
-body {}
-
 div.calculate-container {
     width: 50%;
     border-radius: 20px;
@@ -57,7 +55,7 @@ div.histories {
     min-height: 390px;
     max-height: 400px;
     overflow-x: auto;
-    min-width: 30%;
+    width: 30%;
     text-align: center;
     /* background-color: rgb(190, 183, 183); */
     background-color: rgb(237, 188, 123);
